# SRGGE

./: Application.cpp  Application.h  CMakeLists.txt  LODInstance.cpp  LODInstance.h  LODStack.cpp  LODStack.h  PLYReader.cpp  PLYReader.h  Scene.cpp  Scene.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshInstance.cpp  TriangleMeshInstance.h  UniformMeshGrid.cpp  UniformMeshGrid.h  VectorCamera.cpp  VectorCamera.h  main.cpp
shaders/: basic.frag  basic.vert
windows/SRGGE_BaseCode/: SRGGE_BaseCode.sln
windows/SRGGE_BaseCode/SRGGE_BaseCode/: SRGGE_BaseCode.vcxproj  SRGGE_BaseCode.vcxproj.filters
windows/SRGGE_BaseCode/SRGGE_BaseCode/shaders/: basic.frag  basic.vert
